@@ -231,4 +231,11 @@
   <binary>BACE</binary>
 </ai>
 
+<ai type="uci">
+  <name>Shredder</name>
+  <binary>ShredderClassicLinux</binary>
+  <!-- FIXME: Add some difficulty levels -->
+</ai>
+
+
 </aiconfig>
