@@ -293,6 +293,17 @@ Chess games do not have to end in checkmate — either player may resign if the 
   <listitem>
 	<para>Amundsen</para>
   </listitem>
+  <listitem>
+	<para>Shredder</para>
+  </listitem>
+  <listitem>
+	<para>Toga II</para>
+  </listitem>
+  <listitem>
+	<para>Boo's Chess Engine</para>
+  </listitem>
+
+
 </itemizedlist>
 
 </sect1>
