@@ -1,3 +1,9 @@
+2008-01-26  Andreas Røsdal  <andreasr@gnome.org>
+
+	* data/ai.xml:
+	* help/C/glchess.xml: Add support for Shredder Classic 3.
+
+
 2008-01-25  Robert Ancell  <robert.ancell@gmail.com>
 
 	* Set new/load/save/preferences/about dialogs to be transient of the main application
